--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "type": "module",
   "devDependencies": {
     "@types/bun": "latest",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.42",
+    "tailwindcss": "^3.4.10",
     "vitepress": "^1.3.4"
   },
   "peerDependencies": {
